--- a/docs/vocs/docs/pages/cli/op-reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/op-reth/node.mdx
@@ -897,6 +897,9 @@ Engine:
       --engine.legacy-state-root
           Enable legacy state root
 
+      --engine.disable-state-cache
+          Disable state cache
+
       --engine.disable-prewarming
           Disable parallel prewarming
 
