--- a/docs/vocs/docs/pages/run/faq/pruning.mdx
+++ b/docs/vocs/docs/pages/run/faq/pruning.mdx
@@ -228,93 +228,93 @@ The following tables describe the requirements for prune segments, per RPC metho
 
 #### `debug` namespace
 
-| RPC / Segment              | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History |
-| -------------------------- | --------------- | ------------------ | -------- | --------------- | --------------- |
-| `debug_getRawBlock`        | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `debug_getRawHeader`       | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `debug_getRawReceipts`     | ✅              | ✅                 | ❌       | ✅              | ✅              |
-| `debug_getRawTransaction`  | ✅              | ❌                 | ✅       | ✅              | ✅              |
-| `debug_traceBlock`         | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `debug_traceBlockByHash`   | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `debug_traceBlockByNumber` | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `debug_traceCall`          | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `debug_traceCallMany`      | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `debug_traceTransaction`   | ✅              | ✅                 | ✅       | ❌              | ❌              |
+| RPC / Segment              | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History | Bodies History |
+| -------------------------- | --------------- | ------------------ | -------- | --------------- | --------------- | -------------- |
+| `debug_getRawBlock`        | ✅              | ✅                 | ✅       | ✅              | ✅              | ❌             |
+| `debug_getRawHeader`       | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `debug_getRawReceipts`     | ✅              | ✅                 | ❌       | ✅              | ✅              | ✅             |
+| `debug_getRawTransaction`  | ✅              | ❌                 | ✅       | ✅              | ✅              | ❌             |
+| `debug_traceBlock`         | ✅              | ✅                 | ✅       | ❌              | ❌              | ❌             |
+| `debug_traceBlockByHash`   | ✅              | ✅                 | ✅       | ❌              | ❌              | ❌             |
+| `debug_traceBlockByNumber` | ✅              | ✅                 | ✅       | ❌              | ❌              | ❌             |
+| `debug_traceCall`          | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `debug_traceCallMany`      | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `debug_traceTransaction`   | ✅              | ✅                 | ✅       | ❌              | ❌              | ❌             |
 
 #### `eth` namespace
 
-| RPC / Segment                             | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History |
-| ----------------------------------------- | --------------- | ------------------ | -------- | --------------- | --------------- |
-| `eth_accounts`                            | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_blockNumber`                         | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_call`                                | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `eth_chainId`                             | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_createAccessList`                    | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `eth_estimateGas`                         | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `eth_feeHistory`                          | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_gasPrice`                            | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getBalance`                          | ✅              | ✅                 | ✅       | ❌              | ✅              |
-| `eth_getBlockByHash`                      | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getBlockByNumber`                    | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getBlockReceipts`                    | ✅              | ✅                 | ❌       | ✅              | ✅              |
-| `eth_getBlockTransactionCountByHash`      | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getBlockTransactionCountByNumber`    | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getCode`                             | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getFilterChanges`                    | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getFilterLogs`                       | ✅              | ✅                 | ❌       | ✅              | ✅              |
-| `eth_getLogs`                             | ✅              | ✅                 | ❌       | ✅              | ✅              |
-| `eth_getStorageAt`                        | ✅              | ✅                 | ✅       | ✅              | ❌              |
-| `eth_getTransactionByBlockHashAndIndex`   | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getTransactionByBlockNumberAndIndex` | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getTransactionByHash`                | ✅              | ❌                 | ✅       | ✅              | ✅              |
-| `eth_getTransactionCount`                 | ✅              | ✅                 | ✅       | ❌              | ✅              |
-| `eth_getTransactionReceipt`               | ✅              | ❌                 | ❌       | ✅              | ✅              |
-| `eth_getUncleByBlockHashAndIndex`         | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getUncleByBlockNumberAndIndex`       | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getUncleCountByBlockHash`            | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_getUncleCountByBlockNumber`          | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_maxPriorityFeePerGas`                | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_mining`                              | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_newBlockFilter`                      | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_newFilter`                           | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_newPendingTransactionFilter`         | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_protocolVersion`                     | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_sendRawTransaction`                  | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_sendTransaction`                     | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_sign`                                | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_signTransaction`                     | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_signTypedData`                       | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_subscribe`                           | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_syncing`                             | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_uninstallFilter`                     | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `eth_unsubscribe`                         | ✅              | ✅                 | ✅       | ✅              | ✅              |
+| RPC / Segment                             | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History | Bodies History |
+| ----------------------------------------- | --------------- | ------------------ | -------- | --------------- | --------------- | -------------- |
+| `eth_accounts`                            | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_blockNumber`                         | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_call`                                | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `eth_chainId`                             | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_createAccessList`                    | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `eth_estimateGas`                         | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `eth_feeHistory`                          | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_gasPrice`                            | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getBalance`                          | ✅              | ✅                 | ✅       | ❌              | ✅              | ✅             |
+| `eth_getBlockByHash`                      | ✅              | ✅                 | ✅       | ✅              | ✅              | ❌             |
+| `eth_getBlockByNumber`                    | ✅              | ✅                 | ✅       | ✅              | ✅              | ❌             |
+| `eth_getBlockReceipts`                    | ✅              | ✅                 | ❌       | ✅              | ✅              | ✅             |
+| `eth_getBlockTransactionCountByHash`      | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getBlockTransactionCountByNumber`    | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getCode`                             | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getFilterChanges`                    | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getFilterLogs`                       | ✅              | ✅                 | ❌       | ✅              | ✅              | ✅             |
+| `eth_getLogs`                             | ✅              | ✅                 | ❌       | ✅              | ✅              | ✅             |
+| `eth_getStorageAt`                        | ✅              | ✅                 | ✅       | ✅              | ❌              | ✅             |
+| `eth_getTransactionByBlockHashAndIndex`   | ✅              | ✅                 | ✅       | ✅              | ✅              | ❌             |
+| `eth_getTransactionByBlockNumberAndIndex` | ✅              | ✅                 | ✅       | ✅              | ✅              | ❌             |
+| `eth_getTransactionByHash`                | ✅              | ❌                 | ✅       | ✅              | ✅              | ❌             |
+| `eth_getTransactionCount`                 | ✅              | ✅                 | ✅       | ❌              | ✅              | ✅             |
+| `eth_getTransactionReceipt`               | ✅              | ❌                 | ❌       | ✅              | ✅              | ✅             |
+| `eth_getUncleByBlockHashAndIndex`         | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getUncleByBlockNumberAndIndex`       | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getUncleCountByBlockHash`            | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_getUncleCountByBlockNumber`          | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_maxPriorityFeePerGas`                | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_mining`                              | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_newBlockFilter`                      | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_newFilter`                           | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_newPendingTransactionFilter`         | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_protocolVersion`                     | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_sendRawTransaction`                  | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_sendTransaction`                     | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_sign`                                | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_signTransaction`                     | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_signTypedData`                       | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_subscribe`                           | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_syncing`                             | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_uninstallFilter`                     | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `eth_unsubscribe`                         | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
 
 #### `net` namespace
 
-| RPC / Segment   | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History |
-| --------------- | --------------- | ------------------ | -------- | --------------- | --------------- |
-| `net_listening` | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `net_peerCount` | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `net_version`   | ✅              | ✅                 | ✅       | ✅              | ✅              |
+| RPC / Segment   | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History | Bodies History |
+| --------------- | --------------- | ------------------ | -------- | --------------- | --------------- | -------------- |
+| `net_listening` | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `net_peerCount` | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `net_version`   | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
 
 #### `trace` namespace
 
-| RPC / Segment                   | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History |
-| ------------------------------- | --------------- | ------------------ | -------- | --------------- | --------------- |
-| `trace_block`                   | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `trace_call`                    | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `trace_callMany`                | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `trace_get`                     | ✅              | ❌                 | ✅       | ❌              | ❌              |
-| `trace_rawTransaction`          | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `trace_replayBlockTransactions` | ✅              | ✅                 | ✅       | ❌              | ❌              |
-| `trace_replayTransaction`       | ✅              | ❌                 | ✅       | ❌              | ❌              |
-| `trace_transaction`             | ✅              | ❌                 | ✅       | ❌              | ❌              |
+| RPC / Segment                   | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History | Bodies History |
+| ------------------------------- | --------------- | ------------------ | -------- | --------------- | --------------- | -------------- |
+| `trace_block`                   | ✅              | ✅                 | ✅       | ❌              | ❌              | ❌             |
+| `trace_call`                    | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `trace_callMany`                | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `trace_get`                     | ✅              | ❌                 | ✅       | ❌              | ❌              | ❌             |
+| `trace_rawTransaction`          | ✅              | ✅                 | ✅       | ❌              | ❌              | ✅             |
+| `trace_replayBlockTransactions` | ✅              | ✅                 | ✅       | ❌              | ❌              | ❌             |
+| `trace_replayTransaction`       | ✅              | ❌                 | ✅       | ❌              | ❌              | ❌             |
+| `trace_transaction`             | ✅              | ❌                 | ✅       | ❌              | ❌              | ❌             |
 
 #### `txpool` namespace
 
-| RPC / Segment        | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History |
-| -------------------- | --------------- | ------------------ | -------- | --------------- | --------------- |
-| `txpool_content`     | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `txpool_contentFrom` | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `txpool_inspect`     | ✅              | ✅                 | ✅       | ✅              | ✅              |
-| `txpool_status`      | ✅              | ✅                 | ✅       | ✅              | ✅              |
+| RPC / Segment        | Sender Recovery | Transaction Lookup | Receipts | Account History | Storage History | Bodies History |
+| -------------------- | --------------- | ------------------ | -------- | --------------- | --------------- | -------------- |
+| `txpool_content`     | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `txpool_contentFrom` | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `txpool_inspect`     | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
+| `txpool_status`      | ✅              | ✅                 | ✅       | ✅              | ✅              | ✅             |
