docs: add reth JSON-RPC namespace documentation

--- a/docs/vocs/docs/pages/jsonrpc/intro.mdx
+++ b/docs/vocs/docs/pages/jsonrpc/intro.mdx
@@ -26,7 +26,7 @@ The methods are grouped into namespaces, which are listed below:
 | [`trace`](/jsonrpc/trace)   | The `trace` API provides several methods to inspect the Ethereum state, including Parity-style traces. | No        |
 | [`admin`](/jsonrpc/admin)   | The `admin` API allows you to configure your node.                                                     | **Yes**   |
 | [`rpc`](/jsonrpc/rpc)       | The `rpc` API provides information about the RPC server and its modules.                               | No        |
-| `reth`                      | The `reth` API provides reth-specific methods like balance changes and chain notifications.            | No        |
+| [`reth`](/jsonrpc/reth)     | The `reth` API provides reth-specific methods like balance changes and chain notifications.            | No        |
 | `ots`                       | The `ots` API provides Otterscan-compatible methods for block exploration.                             | No        |
 | `flashbots`                 | The `flashbots` API provides block submission validation methods for builders.                         | No        |
 | `miner`                     | The `miner` API allows you to configure miner/builder settings like extra data and gas limits.         | **Yes**   |
